# .cpp files here
set(SOURCES
    main.cpp
  #   sort.cpp
  #   series.cpp
	# matrixArray.cpp
  #   pascalTriange.cpp
  #   accountBalance.cpp
)

# Executable using the sources
add_executable(PointersApp ${SOURCES})
# add_executable(SortApp sort.cpp)

# Libraries
# target_link_libraries(TutorialApp PRIVATE your_library)

