# .cpp files here
set(SOURCES
    main.cpp
  #   sort.cpp
  #   series.cpp
	# matrixArray.cpp
  #   pascalTriange.cpp
  #   accountBalance.cpp
)

# Executable using the sources
add_executable(ArraySortApp main.cpp)
add_executable(SeriesOfNumberApp series.cpp)

# Libraries
# target_link_libraries(ArraySortApp PRIVATE your_library)

